fix ​incorrect syntax

--- a/docs/design/跨集群服务访问介绍.md
+++ b/docs/design/跨集群服务访问介绍.md
@@ -28,7 +28,7 @@
     
   
 
-FabDNS有两个组件: service-hub与fab-dns。还提供了一个CRD: GlobalService。一个集群若想将一个服务提供给其他集群，首先要将该服务标注为全局服务。 service-hub负责各个集群间全局服务的导出与导入，fab-dns负责在集群内部提供全局服务的地址解析。每个集群部署时FabDNS时要标注拓扑信息，即region和zone信息，FabDNS的拓扑感知就是基于这些拓扑信息来进行的。
+FabDNS有两个组件: service-hub与fab-dns。还提供了一个CRD: GlobalService。一个集群若想将一个服务提供给其他集群，首先要将该服务标注为全局服务。 service-hub负责各个集群间全局服务的导出与导入，fab-dns负责在集群内部提供全局服务的地址解析。每个集群部署FabDNS时要标注拓扑信息，即region和zone信息，FabDNS的拓扑感知就是基于这些拓扑信息来进行的。
 
 
 
